--- a/roles/0_ios_network_interfaces/templates/eth_01_interface.j2
+++ b/roles/0_ios_network_interfaces/templates/eth_01_interface.j2
@@ -1,4 +1,4 @@
-interface Ethernet"{{eth_01_id}}"
- description "{{eth_01_description}}"
- ip address "{{eth_01_ip}} {{eth_01_mask}}"
+interface Ethernet{{eth_01_id}}
+ description {{eth_01_description}}
+ ip address {{eth_01_ip}} {{eth_01_mask}}
  no shutdown
