--- a/roles/0_ios_network_interfaces/templates/eth_02_interface.j2
+++ b/roles/0_ios_network_interfaces/templates/eth_02_interface.j2
@@ -1,4 +1,4 @@
-interface Ethernet"{{eth_02_id}}"
- description "{{eth_02_description}}"
- ip address "{{eth_02_ip}} {{eth_02_mask}}"
+interface Ethernet{{eth_02_id}}
+ description {{eth_02_description}}
+ ip address {{eth_02_ip}} {{eth_02_mask}}
  no shutdown
