--- a/roles/0_ios_network_interfaces/templates/loopback_interface.j2
+++ b/roles/0_ios_network_interfaces/templates/loopback_interface.j2
@@ -1,2 +1,2 @@
-interface loopback "{{ loop_number }}"
- ip address "{{ loop_ip }} {{ loop_mask }}"
+interface loopback {{ loop_number }}
+ ip address {{ loop_ip }} {{ loop_mask }}
