--- a/roles/0_ios_network_interfaces/templates/eth_01_interface.j2
+++ b/roles/0_ios_network_interfaces/templates/eth_01_interface.j2
@@ -1,3 +1,4 @@
-description {{eth_01_description}}
-ip address {{eth_01_ip}} {{eth_01_mask}}
-no shutdown
+interface Ethernet{{eth_01_id}}
+ description {{eth_01_description}}
+ ip address {{eth_01_ip}} {{eth_01_mask}}
+ no shutdown
