--- a/roles/0_ios_network_interfaces/templates/loopback_interface_bdx.j2
+++ b/roles/0_ios_network_interfaces/templates/loopback_interface_bdx.j2
@@ -1,2 +1,2 @@
-interface loopback {{ loop_number }}
- ip address {{ loop_ip }} {{ loop_mask }}
+interface loopback {{ loop_number_bdx }}
+ ip address {{ loop_ip_bdx }} {{ loop_mask_bdx }}
