--- a/roles/1_tls_ios_router_network_interfaces/templates/eth_02_interface_tls.j2
+++ b/roles/1_tls_ios_router_network_interfaces/templates/eth_02_interface_tls.j2
@@ -1,4 +1,4 @@
-interface Ethernet{{eth_01_id_bdx}}
- description {{eth_01_description_bdx}}
- ip address {{eth_01_ip_bdx}} {{eth_01_mask_bdx}}
+interface Ethernet{{eth_02_id_tls}}
+ description {{eth_02_description_tls}}
+ ip address {{eth_02_ip_tls}} {{eth_02_mask_tls}}
  no shutdown
