--- a/roles/1.3_oxf_ios_router_network_interfaces.1/templates/eth_01_interface_oxf.j2
+++ b/roles/1.3_oxf_ios_router_network_interfaces.1/templates/eth_01_interface_oxf.j2
@@ -1,4 +1,4 @@
-interface Ethernet{{eth_01_id_tls}}
- description {{eth_01_description_tls}}
- ip address {{eth_01_ip_tls}} {{eth_01_mask_tls}}
+interface Ethernet{{eth_01_id_oxf}}
+ description {{eth_01_description_oxf}}
+ ip address {{eth_01_ip_oxf}} {{eth_01_mask_oxf}}
  no shutdown
