--- a/roles/1.3_oxf_ios_router_network_interfaces.1/templates/loopback_interface_oxf.j2
+++ b/roles/1.3_oxf_ios_router_network_interfaces.1/templates/loopback_interface_oxf.j2
@@ -1,2 +1,2 @@
-interface loopback {{loop_number_tls}}
- ip address {{loop_ip_tls}} {{loop_mask_tls}}
+interface loopback {{loop_number_oxf}}
+ ip address {{loop_ip_oxf}} {{loop_mask_oxf}}
