--- a/roles/4.4_man_ios_router_ipsec_vpn/templates/crypto_ipsec_man.j2
+++ b/roles/4.4_man_ios_router_ipsec_vpn/templates/crypto_ipsec_man.j2
@@ -1,2 +1,2 @@
-crypto ipsec profile {{crypto_ipsec_name_bdx}}
- set transform-set {{crypto_isakmp_transform_set_bdx}}
+crypto ipsec profile {{crypto_ipsec_name_man}}
+ set transform-set {{crypto_isakmp_transform_set_man}}
