--- a/roles/2.3_oxf_ios_router_ospf/templates/ospf_setting_oxf.j2
+++ b/roles/2.3_oxf_ios_router_ospf/templates/ospf_setting_oxf.j2
@@ -1,4 +1,4 @@
 router ospf {{ospf_process_number_oxf}}
  network {{loop_ip_oxf}} 0.0.0.0 area 0
- network 10.44.186.240 0.0.0.15 area 0
- network 172.16.0.0 0.0.0.255 area 0
+ network {{ospf_interco_network_oxf}} 0.0.0.15 area 0
+ network {{ospf_dmvpn_network_ip}} 0.0.0.255 area 0
