--- a/roles/switch_ospf/templates/ospf_setting.j2
+++ b/roles/switch_ospf/templates/ospf_setting.j2
@@ -1,3 +1,4 @@
+ip routing
 router ospf {{ ospf_process_number }}
  network {{ ospf_vlan_1_network }} {{ ospf_vlan_1_imask }} area 0
  network {{ ospf_vlan_2_network }} {{ ospf_vlan_2_imask }} area 0
